# Master-thesis-Files-indexer

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  compose.yml  diagram.drawio  docker-compose.yml  entrypoint.sh  requirements.txt
app/: database.py  main.py  models.py  schemas.py
app/TopicModeling/: Miner.py  Reader.py  topicModeling.py  topic_modeling_v2.py  topic_modeling_v3.py
app/routers/: documents.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  init_database.py  main.py  models.py  schemas.py  test_main.py
backend/app/TopicModeling/: Miner.py  Reader.py  miner_v2.py  topicModeling.py  topic_modeling_v2.py  topic_modeling_v3.py
backend/app/database/: documents.py  main.py  models.py  topics.py  users.py
backend/app/routers/: chatbot.py  documents.py  topics.py  users.py
backend/app/tests/: test_miner.py
backend/app/utils/: ai_model.py  background_tasks_manager.py  document_transformer.py  preview.py  process_documents.py  process_manager.py  security.py  space_word.py  theme_naming.py
doc/: Archi Backend.mmd  Archi Frontend.mmd  Architecture.mmd  Auth Sequence.mmd  CI-CD.mmd  DB.mmd  Doc Sequence.mmd  archi.md  use-cases.pu
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx
frontend/src/components/: BottomBar.tsx  ChatbotButton.tsx  ChatbotConversation.tsx  CorpusDetail.tsx  CorpusList.tsx  DashboardFilters.tsx  DocumentPreview.tsx  Logo.tsx  NavBar.tsx  Pagination.tsx  ProtectedRoute.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TopBar.tsx  TopBarDashboard.tsx  TopicDetail.tsx  UpdateDocumentModal.tsx
frontend/src/components/ui/: alert.tsx
frontend/src/contexts/: AppContext.tsx  AuthProvider.tsx  DashboardFiltersContext.tsx  DashboardFiltersProvider.tsx  ThemeContext.tsx  ThemeProvider.tsx
frontend/src/hooks/: useChatbotPolling.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Chatbot.tsx  ChatbotPage.tsx  Dashboard.tsx  DocumentDetails.tsx  Home.tsx  Login.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
